fix spacing and background color

--- a/www/scss/basic/_button.scss
+++ b/www/scss/basic/_button.scss
@@ -14,12 +14,13 @@
     width: 70px;
     height: 40px ;
     margin-top: 10px;
+    margin-bottom: 20px;
     padding: 5px;
     border-radius: 10px;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 
                 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
                 0 1px 5px 0 rgba(0, 0, 0,  0.12);
-
+    
     .fa {
         margin: 1.5px;
         font-size: 20px;
