--- a/www/scss/section/_content.scss
+++ b/www/scss/section/_content.scss
@@ -7,7 +7,7 @@
 */
 
 .wrapper {
-    background-color: $bg_primary_col;
+    background-color: $bg_primary_col !important;
 }
 
 .content-wrapper {
